Fix header spacing with additional nav.

--- a/sass/partials/_header.scss
+++ b/sass/partials/_header.scss
@@ -14,9 +14,27 @@ nav {
 
 	li {
 		display: inline;
-		margin-right: 40px;
+		line-height: 26px;
+		// margin-right: 40px;
+		margin: 0 4%;
+		@include respond-to(medium-and-above) {
+			margin: 0 30px 0 0;
+		}
+		@include respond-to(medium-screens) {
+			margin: 0 2%;
+		}
 		&:last-child {
-			margin-right: 0;
+			@include respond-to(medium-and-above) {
+				margin-right: 0;
+			}
+		}
+		&.nav-commitment {
+			span {
+				display: none;
+				@include respond-to(extra-wide-screens) {
+					display: inline;
+				}
+			}
 		}
 	}
 	a {
